Update azure-pipelines.yml for Azure Pipelines
agora vai

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,7 @@ pool:
 steps:
 - task: AzurePowerShell@3
   inputs:
+    azureSubscription: 'AzureRmPipeline.BrunoMattos'
     ScriptPath: 'Deploy-AzureResourceGroup.ps1'
     azurePowerShellVersion: LatestVersion
 
