--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,8 @@ pool:
   name: Criar RG e VNET
   demands: azureps
 
-steps:
-- task: AzurePowerShell@3
+- task: AzurePowerShell@5
   inputs:
     azureSubscription: 'AzureRmPipeline.BrunoMattos'
-    ScriptPath: 'Deploy-AzureResourceGroup.ps1'
-    azurePowerShellVersion: LatestVersion
-
+    ScriptType: 'Deploy-AzureResourceGroup.ps1'
+    azurePowerShellVersion: 'LatestVersion'
